아이디 찾기/비밀번호 찾기

--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -30,4 +30,9 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
+#custom setting
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=hyeontest123@gmail.com
+custom.email.password=bgijxkaglcgstbqx
 #custom.fileupload.path=D:/upload
