추천 게시판 글쓰기 구현

--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -35,4 +35,5 @@ custom.email.host=smtp.gmail.com
 custom.email.port=587
 custom.email.username=hyeontest123@gmail.com
 custom.email.password=bgijxkaglcgstbqx
-#custom.fileupload.path=D:/upload
+
+custom.fileupload.path=D:/upload
