--- a/semi/bin/src/main/resources/application.properties
+++ b/semi/bin/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #server setting
 server.port=8080
 
+
 #database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15214:xe
@@ -29,4 +30,10 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-#custom.fileupload.path=D:/upload
+#custom setting
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=hyeontest123@gmail.com
+custom.email.password=bgijxkaglcgstbqx
+
+custom.fileupload.path=D:/upload
