03/27 Q&A 게시판 세부 기능 구현

--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.web.resources.static-locations=classpath:/static/
 #custom setting
 custom.email.host=smtp.gmail.com
 custom.email.port=587
-custom.email.username=hyeontest123@gmail.com
-custom.email.password=bgijxkaglcgstbqx
+custom.email.username=jhtest1007@gmail.com
+custom.email.password=xyqbdzmxjtvfaupx
 
 custom.fileupload.path=D:/upload
