--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #server setting
 server.port=8080
-
+#server.servlet.context-path=/home
 
 #database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15214:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11d
 spring.datasource.password=kh11d
 
@@ -36,4 +37,5 @@ custom.email.port=587
 custom.email.username=jhtest1007@gmail.com
 custom.email.password=xyqbdzmxjtvfaupx
 
-custom.fileupload.path=D:/upload
+#custom.fileupload.path=D:/upload/kh11d
+custom.fileupload.path=C:/upload/kh11
