--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server setting
 server.port=8080
-#server.servlet.context-path=/home
+server.servlet.context-path=/home
 
 #database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -37,5 +37,6 @@ custom.email.port=587
 custom.email.username=jhtest1007@gmail.com
 custom.email.password=xyqbdzmxjtvfaupx
 
+custom.fileupload.path=D:/upload
 #custom.fileupload.path=D:/upload/kh11d
-custom.fileupload.path=C:/upload/kh11
+#custom.fileupload.path=C:/upload/kh11
