세미 프로젝트 최종 수정

--- a/semi/src/main/resources/application.properties
+++ b/semi/src/main/resources/application.properties
@@ -34,8 +34,8 @@ spring.web.resources.static-locations=classpath:/static/
 #custom setting
 custom.email.host=smtp.gmail.com
 custom.email.port=587
-custom.email.username=jhtest1007@gmail.com
-custom.email.password=xyqbdzmxjtvfaupx
+custom.email.username=thsvnfma1@gmail.com
+custom.email.password=udeybtznnshzsttm
 
 custom.fileupload.path=D:/upload
 #custom.fileupload.path=D:/upload/kh11d
